--- a/docker/Makefile
+++ b/docker/Makefile
@@ -5,17 +5,23 @@ IMG := ${USER}/${NAME}:latest
 build:
 	@docker build -t ${IMG} -f docker/Dockerfile .
 
+rebuild:
+	@docker build --no-cache -t ${IMG} -f docker/Dockerfile .
+
+init:
+	@docker run -v $(shell pwd)/data:/package/data -it ${IMG} bash -c "apache_log_manager/init.sh"
+
 shell:
-	@sudo docker run -it ${IMG} bash -c "/bin/bash"
+	@docker run -v $(shell pwd)/data:/package/data -it ${IMG} bash -c "/bin/bash"
 
 load:
-	@sudo docker run -it ${IMG} bash -c "python3 apache_log_manager/manage.py process_log $(link)"
+	@docker run -v $(shell pwd)/data:/package/data -it ${IMG} bash -c "python3 apache_log_manager/manage.py process_log $(link)"
 
 app:
-	@sudo docker run -it -p 8000:8000 ${IMG} bash -c "python3 apache_log_manager/manage.py runserver 0.0.0.0:8000"
+	@docker run -v $(shell pwd)/data:/package/data -it -p 8000:8000 ${IMG} bash -c "python3 apache_log_manager/manage.py runserver 0.0.0.0:8000"
 
 push:
-	@sudo docker push ${IMG}
+	@docker push ${IMG}
 
 pull:
-	@sudo docker pull ${IMG}
+	@docker pull ${IMG}
